feat: adds a list and delete operation to operations
